# vs_pyhton_omics

./: README.md  anndata_wkt.ipynb  pyproject.toml  scanpy_wfl_2.ipynb  scanpy_wfl_citeseq_alex.ipynb  scanpy_wfl_integrating_data.ipynb  scanpy_wfl_legacy.ipynb  scanpy_wft_gsea.qmd  scanpy_workflow.ipynb  scanpy_workflow_trajectory.ipynb  scikit_bio_omic_sc_p2.ipynb  scikit_bio_omics.qmd
