[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplot>=0.1.9",
    "pandas>=2.3.3",
    "scikit-bio>=0.7.1.post1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
