[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kb-python>=0.29.5",
    "matlib>=0.1.2",
    "matplot>=0.1.9",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pip>=25.3",
    "pybiomart>=0.2.0",
    "scanpy>=1.11.5",
    "scikit-bio>=0.7.1.post1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scikit-misc>=0.5.2",
    "scipy>=1.15.3",
    "scvelo>=0.3.3",
]
